--- a/vercel.json
+++ b/vercel.json
@@ -15,11 +15,11 @@
 	    },
 	    {
 	      "source": "/design",
-	      "destination": "https://www.behance.net/gallery/137248249/Payout?"
+	      "destination": "https://www.behance.net/gallery/138328471/Payout-Funding-Made-Easy"
 	    },
 	    {
 	      "source": "/branding",
-	      "destination": "https://www.behance.net/gallery/137248249/Payout?"
+	      "destination": "https://www.behance.net/gallery/138328471/Payout-Funding-Made-Easy"
 	    }
 	]
 }
